Travis Final Push

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,16 @@ before_install:
   - docker build -t yazovaliyski/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true yazovaliyski/react-test npm test
+  - docker run yazovaliyski/react-test npm test -- --coverage
 
 after_success:
   - docker build -t yazovaliyski/multi-client ./client
+  - docker build -t yazovaliyski/nginx ./nginx
   - docker build -t yazovaliyski/multi-server ./server
   - docker build -t yazovaliyski/multi-worker ./worker
-  - docker build -t yazovaliyski/nginx ./nginx
   # Docker login
 
-  -echo "$docker_password" | docker login -u "$docker_id" --password-stdin
+  - echo "$docker_password" | docker login -u "$docker_id" --password-stdin
   # Take those images and push to Docker HUB
   - docker push yazovaliyski/multi-client
   - docker push yazovaliyski/multi-server
